{
    "name": "FlappingInput",
    "maps": [
        {
            "name": "Player",
            "id": "1ad5f402-6395-4781-8b17-311833d35ad9",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "89be03f5-63ad-4bde-a039-516c0695e234",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6dfb2f6f-9226-4034-a0a6-5a153450d658",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2ffc21ce-505c-438d-9a1e-062f87a12ba5",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "554dab35-8841-4832-9cee-7ae9a8f67f7a",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f43c217e-b587-4066-a985-caf93ed3db25",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}